[package]
name = "nat64"
version = "0.1.0"
edition = "2021"
description = "Static NAT64 translator — allows IPv6-only hosts to appear on the IPv4 Internet"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["ioctl", "poll", "net", "fs"] }
